--- a/src/pages/Layout/index.scss
+++ b/src/pages/Layout/index.scss
@@ -1,6 +1,9 @@
 .layout{
+    width: 100%;
+    height: 100%;
     .container{
         position: fixed;
+        width: 100%;
         top: 0;
         bottom:50px
     }
